--- a/src/pages/section/features/components/card/card.module.css
+++ b/src/pages/section/features/components/card/card.module.css
@@ -1,5 +1,3 @@
-.card {
-  @apply border border-solid border-sky-800 p-3 rounded-md 
-  cursor-pointer hover:shadow-sm hover:shadow-sky-900 
-  flex flex-col items-center;
+.feature {
+  @apply flex flex-col items-center;
 }
