--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -9,7 +9,7 @@
     color: white;
     font-family: 'Montserrat', sans-serif;
     font-size: 16px;
-    padding: 10px 0;
+    padding-top: 10px;
   }
 
   * {
@@ -26,6 +26,10 @@
 
   input {
     @apply rounded-md text-black p-4;
+  }
+
+  button {
+    @apply cursor-pointer disabled:opacity-50 disabled:cursor-default;
   }
 
   section,
@@ -65,6 +69,10 @@
 
   .btn-md {
     @apply px-4 py-3;
+  }
+
+  .card {
+    @apply p-3;
   }
 }
 
