--- a/src/pages/section/url/url.module.css
+++ b/src/pages/section/url/url.module.css
@@ -2,11 +2,11 @@
   @apply bg-secondary;
 }
 .wrapper {
-  @apply flex flex-col justify-center space-y-3;
+  @apply flex flex-col space-y-3;
 }
 
 .urlArea {
-  @apply flex flex-col justify-center space-y-3 md:flex-row md:space-x-4 md:space-y-0;
+  @apply  flex flex-col justify-center space-y-3 md:flex-row md:space-x-4 md:space-y-0;
 }
 
 .shortenInput {
@@ -14,3 +14,4 @@
   focus:ring-1 focus:ring-offset-1
   focus:border-blue-600 text-base;
 }
+/* outline outline-1 outline-yellow-300 */
